# LNAB

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: .matrix.h.swp  matrix.h  matrixOP.h  vectors.h
lib/: matrix.cpp  matrix.h
src/: .matrix.cpp.swp  matrix.cpp  matrixOP.cpp
